添加了分配用户角色的功能

--- a/经验.md
+++ b/经验.md
@@ -168,6 +168,23 @@ slot-scope 可以取到这一行的数据
 </el-table-column>
 ```
 
+## MessageBox
+
+MessageBox 包含 alert、confirm、prompt 方法。调用方法是导入 MessageBox，挂载到 vue 原型上。
+
+```
+import { MessageBox } from 'element-ui'
+Vue.prototype.$messageBox = MessageBox
+// 或者单独挂载一个方法
+Vue.prototype.$confirm = MessageBox.confirm
+```
+
+调用具体的方法时，通过 $messageBox 引用，如
+
+```
+this.$messageBox.confirm
+```
+
 # 用户认证
 
 ## 登陆
