当进入首页时自动跳转到 users 页面

--- a/经验.md
+++ b/经验.md
@@ -272,7 +272,9 @@ axios.interceptors.response.use(
 )
 ```
 
-# router 设置网页标题 title
+# Router
+
+## 设置网页标题 title
 
 在 router 信息里添加 title 信息，然后设置后导航守卫：
 
@@ -294,6 +296,22 @@ router.afterEach((to, from) => {
   }
 })
 ```
+
+## Redirected ... via a navigation guard
+
+`Redirected when going from "/login" to "/" via a navigation guard.`
+
+可以在 router/index.js 里添加如下代码解决。这个错误可能是因为连续的重定向导致的（push 可能在某些情况下存在一定问题）。
+
+```
+const originalPush = VueRouter.prototype.push
+VueRouter.prototype.push = function push(location, onResolve, onReject) {
+    if (onResolve || onReject) return originalPush.call(this, location, onResolve, onReject)
+    return originalPush.call(this, location).catch(err => err)
+}
+```
+
+或者，把某些 push 改成直接设置 url。如 login 之后本来是 `push('/')` 的，`/` 又会重定向到 '/users' 页面，结果出现了上面的错误。改成 `location.href = '/'` 之后就没有这个错误了。
 
 # Eslint
 
