添加了权限列表页面

--- a/经验.md
+++ b/经验.md
@@ -330,3 +330,7 @@ VueRouter.prototype.push = function push(location, onResolve, onReject) {
 1或者"warn" ，打开规则，并且将规则视为一个警告（并不会导致检查不通过）。
 
 2或者"error" ，打开规则，并且将规则视为一个错误 (退出码为1，检查不通过)。
+
+# 电商后台用户权限架构
+
+一个用户可以扮演多个角色，每个角色又有一定的权限。这形成了用户权限架构。
