完成了商品分类页面的功能

--- a/经验.md
+++ b/经验.md
@@ -245,6 +245,41 @@ show-checkbox
 
 使用 `getCheckedKeys` 方法可以获取到所有选中的值，使用 `getHalfCheckedKeys` 获取所有半选中的值。很多时候这俩都需要获取的。
 
+## 树形表格
+
+在 el-table 上设置这个属性，就可以让表格自动识别出树形结构，自动添加展开按钮。
+
+```
+:tree-props="{ children: 'children' }"
+```
+
+## Loading 加载进度条
+
+引入 Loading 组件，然后在要显示进度的元素上设置 v-loading 指令，加载状态绑定一个变量。
+
+```
+div v-loading="loading"
+```
+
+## 级联选择器
+
+级联选择器使用的数据，默认需要包含 label 属性和 value 等属性。如果要使用的数据里，对应的属性名和默认的不同，可以通过 props 属性进行设置。
+
+```
+<el-cascader
+  v-model="chooseCate"
+  :options="parentCateList"
+  :props="{
+    expandTrigger: 'hover',
+    value: 'cat_id',
+    label: 'cat_name'
+    checkStrictly: true
+  }"
+  clearable
+  ref="chooseRef"
+></el-cascader>
+```
+
 # 用户认证
 
 ## 登陆
@@ -425,4 +460,40 @@ getRightIds(node, arr) {
    this.getRightIds(children, arr)
  }
 }
+```
+
+# 树形表格 TreeTable
+
+## 推荐使用 element 的树形表格
+
+在 el-table 上设置这个属性，就可以让表格自动识别出树形结构，自动添加展开按钮。
+
+```
+:tree-props="{ children: 'children' }"
+```
+
+## 第三方插件
+
+https://www.npmjs.com/package/vue-table-with-tree-grid
+
+```
+npm i -S vue-table-with-tree-grid
+
+// main 中引入，注册为一个 vue 组件
+import TreeTable from 'vue-table-with-tree-grid'
+Vue.component('tree-table', TreeTable)
+
+// ts 项目可能需要建立一个 .d.ts 文件，声明这是一个模块
+declare module 'vue-table-with-tree-grid'
+
+//添加到全局 Vue 的 components 上
+new Vue({
+  router,
+  store,
+  components: { TreeTable },
+  render: h => h(App)
+}).$mount('#app')
+
+// 在其他组件中直接使用
+<tree-table :data="cateList"></tree-table>
 ```
