完成了分类参数管理的页面

--- a/经验.md
+++ b/经验.md
@@ -280,6 +280,22 @@ div v-loading="loading"
 ></el-cascader>
 ```
 
+## Tabs 选项卡
+
+```
+<el-tabs v-model="activeName" @tab-click="tabsClick">
+<el-tab-pane label="动态参数" name="async"></el-tab-pane>
+</el-tabs>
+```
+
+`@tab-click` 事件绑定一个方法，可以从第一个参数的 name 取得点击后激活的 tab 的 name。
+
+```
+handleClick(tab, event) {
+   this.activeName = tab.name
+}
+```
+
 # 用户认证
 
 ## 登陆
@@ -430,9 +446,19 @@ VueRouter.prototype.push = function push(location, onResolve, onReject) {
 
 一个用户可以扮演多个角色，每个角色又有一定的权限。这形成了用户权限架构。
 
+# 电商产品的参数管理
+
+一个商品有动态参数和静态属性。
+
+动态参数比如手机的规格： 128G 256G 银色 蓝色
+
+静态属性是这类商品必填的属性，如 品牌、型号、重量 等。
+
 # 局部更新数据防止页面抖动（重绘）
 
 比如一个复杂的表格，我们修改了其中一部分数据，如果可以，应该尽量更新这一部分的数据，而不是重新请求/赋值整个数据，因为整个修改数据会导致大范围重绘，局部更新可以保持状态，不必重绘。
+
+比如修改了一个对象的 name 属性，应该把 name 设置为新的值，而不是重新请求这个对象。
 
 # Vue 监听对象和数组变化
 
@@ -497,3 +523,7 @@ new Vue({
 // 在其他组件中直接使用
 <tree-table :data="cateList"></tree-table>
 ```
+
+# 检查空值
+
+对字符串使用 `trim` 方法去除首位的空格。
