--- a/经验.md
+++ b/经验.md
@@ -2,6 +2,17 @@
 
 ## 布局
 
+## input 类型
+
+```
+<el-input
+                  type="number"
+                  v-model="formData.goods_weight"
+                ></el-input>
+```
+
+设置 `type="number"` 可以只允许输入数字，并且会显示右侧调整数量的控件。
+
 ## 表单校验
 
 1. 定义校验规则
@@ -272,7 +283,7 @@ div v-loading="loading"
   :props="{
     expandTrigger: 'hover',
     value: 'cat_id',
-    label: 'cat_name'
+    label: 'cat_name',
     checkStrictly: true
   }"
   clearable
@@ -295,6 +306,35 @@ handleClick(tab, event) {
    this.activeName = tab.name
 }
 ```
+
+### 阻止切换
+
+`before-leave` 事件可以返回一个 boolean 值，决定是否允许这次切换。
+
+## Upload
+
+使用 Upload 组件上传时，如果需要携带 token 等请求头，可以自定义一个，绑定到 headers 属性上。
+
+```
+<el-upload
+ action="http://127.0.0.1:8888/api/private/v1/upload"
+ :on-preview="handlePreview"
+ :on-remove="handleRemove"
+ list-type="picture"
+ :headers="headerObj"
+>
+ <el-button size="small" type="primary">点击上传</el-button>
+ <div slot="tip" class="el-upload__tip">
+   只能上传jpg/png文件，且不超过500kb
+ </div>
+</el-upload>
+
+// js
+headerObj = {
+ Authorization: window.sessionStorage.getItem('token')
+}
+```
+
 
 # 用户认证
 
