完成商品添加的功能

--- a/经验.md
+++ b/经验.md
@@ -567,3 +567,16 @@ new Vue({
 # 检查空值
 
 对字符串使用 `trim` 方法去除首位的空格。
+
+# 富文本编辑器
+
+vue-quill-editor 富文本编辑器使用
+
+https://www.jianshu.com/p/a6cba69d6e49
+
+它可以 v-model 一个数据，使用很方便。返回的值是带有 html 标签的文本。
+
+
+```
+<quillEditor v-model="formData.goods_introduce"></quillEditor>
+```
