完成了订单列表的功能

--- a/经验.md
+++ b/经验.md
@@ -20,6 +20,7 @@
 3. 在 el-form-item 上使用 prop 属性传入验证规则的名字
 4. prop 传入的名字最好和这个输入框的 name 一致，否则可能验证不正常。
 
+
 表单校验默认是回调形式，不给校验方法 validate 传入参数则是 promise，如下使用：
 
 ```
@@ -27,6 +28,23 @@ async check() {
  const r = await this.$refs.addRoleForm.validate().catch((err) => err)
  console.log(r)
 }
+```
+
+## 如果验证的值是数字
+
+首先 input 指定类型为 number
+
+```
+<el-input
+   type="number"
+   v-model.number="formData.goods_number"
+ ></el-input>
+ ```
+
+然后验证规则里也要加上类型说明：
+
+```
+{ type: 'number', min: 1, message: '商品数量不能为空', trigger: 'blur' }
 ```
 
 ## 表单重置
@@ -579,4 +597,14 @@ https://www.jianshu.com/p/a6cba69d6e49
 
 ```
 <quillEditor v-model="formData.goods_introduce"></quillEditor>
+```
+# vue 里引入静态 js 文件
+
+文件最好放在 assets 里
+
+```
+<!-- 在 js 顶部引入 -->
+import city from '@/utils/citydata.js'
+// 在 data 里面再用一个变量引用它，这样才能使用
+city = city
 ```
