--- a/经验.md
+++ b/经验.md
@@ -608,3 +608,194 @@ import city from '@/utils/citydata.js'
 // 在 data 里面再用一个变量引用它，这样才能使用
 city = city
 ```
+
+# Echarts
+
+引入 echarts，给它一个 dom 元素初始化，最后传递数据。
+
+```
+import echarts from 'echarts'
+
+echarts = echarts
+
+// 初始化
+const myChart = this.echarts.init(this.$refs.echartsRef)
+// 绘制图表
+const data = await this.getReportData()
+myChart.setOption(data)
+```
+
+# nprogress 页面加载进度条
+
+```
+npm install --save nprogress
+```
+
+用法
+
+```
+NProgress.start();
+NProgress.done();
+```
+
+可以在路由里使用，进入页面之前显示进度条，进入页面之后隐藏进度条。
+
+也可以在 axios 拦截器中使用，发起请求时显示进度条，response 时隐藏进度条。
+
+router.js 中使用：
+
+```
+//导入
+import NProgress from 'nprogress'
+import 'nprogress/nprogress.css'
+
+router.beforeEach((to, from, next) => {
+  NProgress.start()
+  next()
+})
+
+router.afterEach(() => {
+  NProgress.done()
+})
+```
+
+拦截器使用：
+
+```
+axios.interceptors.request.use(
+  config => {
+    NProgress.start()
+    return config
+  },
+  err => {
+    return Promise.reject(err)
+  }
+)
+
+axios.interceptors.response.use(
+  response => {
+    NProgress.done()
+    return response
+  },
+  err => {
+    return Promise.reject(err.response)
+  }
+)
+```
+
+# 项目优化策略
+
+## 打包优化
+
+参考列表
+
+vue-cli3项目打包优化 
+https://segmentfault.com/a/1190000021477337
+
+### 移除项目文件里的 console.log 代码
+
+使用 babel 插件 `babel-plugin-transform-remove-console`。
+
+```
+npm install babel-plugin-transform-remove-console --save-dev
+```
+
+.babelrc 或者 babel.config.js 里添加这个插件
+```
+// without options
+{
+  "plugins": ["transform-remove-console"]
+}
+
+// with options
+{
+  "plugins": [ ["transform-remove-console", { "exclude": [ "error", "warn"] }] ]
+}
+```
+
+如果要只在生产环境中让它生效，可以判断环境变量，如下：
+
+```
+const propPlugins = []
+// 只在生产环境里启用的插件
+if (process.env.NODE_ENV === 'prodution') {
+  propPlugins.push('transform-remove-console')
+}
+
+module.exports = {
+  presets: ['@vue/app', ['@babel/preset-env', { modules: false }]],
+  plugins: [
+    [
+      'component',
+      {
+        libraryName: 'element-ui',
+        styleLibraryName: 'theme-chalk'
+      }
+    ],
+    ...propPlugins
+  ]
+}
+```
+
+### 生成打包报告
+
+```
+npm run build --report
+```
+
+或者通过 vue ui 启动 gui，在里面打包，可以查看报告。
+
+### 通过 vue.config.js 优化配置
+
+新建  vue.config.js文件。
+
+可以定义 configureWebpack 或者 chainWebpack 定义打包方式。作用是相同的，只是方式不同。
+
+#### chainWebpack 自定义打包入口
+
+修改打包入口
+
+#### 不生成 sourceMap 文件
+
+```
+module.exports = {
+  productionSourceMap: false,
+}
+```
+
+1.95
+
+#### 设置 externals 不打包某些资源，改用 cdn
+
+```
+module.exports = {
+  // ...
+  configureWebpack: config => {
+    if (process.env.NODE_ENV === 'production') {
+      // 分离不常用资源库
+      config.externals = {
+        'vue': 'Vue',
+        'vue-router': 'VueRouter'
+      }
+    }
+  }
+}
+```
+
+左边的 key 是包名，右侧的是项目里引入这些包时使用的名称
+
+然后在**打包后的** dist/index.html 里添加这些资源的 cdn 资源
+
+```
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+```
+
+
+## 使用 cdn 加载部分资源
+
+## 组件按需加载
+
+## 路由按需加载
+
+## 首页内容定制
