--- a/经验.md
+++ b/经验.md
@@ -683,7 +683,7 @@ axios.interceptors.response.use(
 )
 ```
 
-# 项目优化策略
+# 项目打包优化
 
 ## 打包优化
 
@@ -751,9 +751,6 @@ npm run build --report
 
 可以定义 configureWebpack 或者 chainWebpack 定义打包方式。作用是相同的，只是方式不同。
 
-#### chainWebpack 自定义打包入口
-
-修改打包入口
 
 #### 不生成 sourceMap 文件
 
@@ -763,23 +760,76 @@ module.exports = {
 }
 ```
 
-1.95
+#### chainWebpack 自定义打包入口
+
+修改打包入口
+
+#### 使用 htmlWebpackPlugin 区分不同模式
+
+```
+module.exports = {
+  productionSourceMap: false,
+
+  chainWebpack: config => {
+    // 发布模式
+    config.when(process.env.NODE_ENV === 'production', config => {
+      // 设置入口文件
+      config.entry('app').clear().add('./src/main-prod.ts')
+
+      // 使用 externals 抽离依赖项，设置在这里的依赖项不会被打包，所以我们可以用 cdn 引入这些依赖
+      config.set(['externals', {
+        vue: 'Vue',
+        'vue-router': 'VueRouter'
+      }])
+      // 左侧是这些依赖的包名，右侧是这些依赖在使用中的名字
+
+      // 设置 htmlWebpackPlugin 插件上的标识
+      config.plugin('html').tap(args => {
+        args[0].isProd = true
+        return args
+      })
+    })
+
+    // 开发模式
+    config.when(process.env.NODE_ENV === 'development', config => {
+      // 设置入口文件
+      config.entry('app').clear().add('./src/main-dev.ts')
+
+      // 设置 htmlWebpackPlugin 插件上的标识
+      config.plugin('html').tap(args => {
+        args[0].isProd = false
+        return args
+      })
+    })
+  }
+}
+
+```
+
+在 public/index.html 中可以读取这个设置，在不同模式下显示/输出不同内容。
+
+```
+<span><%= htmlWebpackPlugin.options.isProd ? 'pro' : 'dev' %></span>
+```
+
+## 使用 cdn 加载部分资源
+
+例如下面的 cdn 资源优化，需要判断只在生产环境下才添加那些 cdn 的链接。开发模式下不需要使用 cdn。
+
+```
+<% if(htmlWebpackPlugin.options.isProd){ %>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+<% } %>
+```
 
 #### 设置 externals 不打包某些资源，改用 cdn
 
 ```
-module.exports = {
-  // ...
-  configureWebpack: config => {
-    if (process.env.NODE_ENV === 'production') {
-      // 分离不常用资源库
-      config.externals = {
-        'vue': 'Vue',
-        'vue-router': 'VueRouter'
-      }
-    }
-  }
-}
+config.set(['externals', {
+  vue: 'Vue',
+  'vue-router': 'VueRouter'
+}])
 ```
 
 左边的 key 是包名，右侧的是项目里引入这些包时使用的名称
@@ -787,15 +837,64 @@ module.exports = {
 然后在**打包后的** dist/index.html 里添加这些资源的 cdn 资源
 
 ```
+<% if(htmlWebpackPlugin.options.isProd){ %>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
 <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+<% } %>
 ```
 
+#### 使用 cdn 加载 Element-ui
 
-## 使用 cdn 加载部分资源
+## 组件按需加载 懒加载
 
-## 组件按需加载
+## 路由按需加载 懒加载
 
-## 路由按需加载
+# 项目上线
 
-## 首页内容定制
+创建个文件夹作为网站目录，`npm init -y` 初始化一下。
+
+把打包生成的 dist 文件夹拷贝进来，然后用 nodejs 的一些后台框架创建网站。
+
+## 创建网站
+
+## 开启 Gzip 压缩
+
+需要服务端启用 Gzip 压缩。 express 框架可以使用 compression 中间件。
+
+## 导入 https 证书使用
+
+## 使用 pm2 管理
+
+```
+npm i -g pm2
+```
+
+$ pm2 start app.js  启动app项目
+
+$ pm2 start app.js --name name  启动app项目，并设置别名
+
+$ pm2 list 列出由pm2管理的所有进程信息，还会显示一个进程会被启动多少次，因为没处理的异常。
+
+ 
+
+$ pm2 monit 监视每个node进程的CPU和内存的使用情况
+
+$ pm2 logs 显示所有进程日志
+
+$ pm2 stop all 停止所有进程
+
+$ pm2 restart all 重启所有进程
+
+$ pm2 reload all 0秒停机重载进程 (用于 NETWORKED 进程)
+
+$ pm2 stop 0 停止指定的进程
+
+$ pm2 restart 0 重启指定的进程
+
+$ pm2 startup 产生 init 脚本 保持进程活着
+
+$ pm2 web 运行健壮的 computer API endpoint (http://localhost:9615)
+
+$ pm2 delete 0 杀死指定的进程
+
+$ pm2 delete all 杀死全部进程
