用 cdn 引入 element-ui ，但是对齐的分离不彻底

--- a/经验.md
+++ b/经验.md
@@ -692,6 +692,10 @@ axios.interceptors.response.use(
 vue-cli3项目打包优化 
 https://segmentfault.com/a/1190000021477337
 
+Vue电商后台管理系统 打包优化
+
+https://naccl.top/blog/15
+
 ### 移除项目文件里的 console.log 代码
 
 使用 babel 插件 `babel-plugin-transform-remove-console`。
@@ -844,6 +848,28 @@ config.set(['externals', {
 ```
 
 #### 使用 cdn 加载 Element-ui
+
+这个地方遇到了很多问题。目前没能彻底将其分离。
+
+先配置生产环境中不打包 element-ui。然后在 index.html 里加载 css 和 js。
+
+```
+config.set(['externals', {
+  vue: 'Vue',
+  nprogress: 'NProgress',
+  'element-ui': 'ELEMENT'
+}]
+```
+
+```
+ <link
+   rel="stylesheet"
+   href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+ />
+ <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+```
+
+项目中对 element-ui 是按需引入的，如果注释掉了对它的引入，打包后的项目里 element-ui 就跟没生效一样。所以没有注释掉它的引入。可以注释掉 main.js 里对它的 css 的引入。
 
 ## 组件按需加载 懒加载
 
