echarts 使用 cdn 引入

--- a/经验.md
+++ b/经验.md
@@ -871,6 +871,23 @@ config.set(['externals', {
 
 项目中对 element-ui 是按需引入的，如果注释掉了对它的引入，打包后的项目里 element-ui 就跟没生效一样。所以没有注释掉它的引入。可以注释掉 main.js 里对它的 css 的引入。
 
+## 使用 cdn 引入 echarts
+
+这个不用区分生产和开发环境了，可以直接引入 script。
+
+```
+<script src="https://cdn.bootcdn.net/ajax/libs/echarts/4.9.0-rc.1/echarts.common.min.js"></script>
+```
+
+使用时也不需要 import，直接用 window.echarts 使用。
+
+```
+config.set(['externals', {
+  vue: 'Vue',
+  echarts: 'echarts'
+}])
+```
+
 ## 组件按需加载 懒加载
 
 ## 路由按需加载 懒加载
